# gis-werk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  readme.MD
geoProject/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
geoProject/geoProject/: asgi.py  serializers.py  settings.py  urls.py  viewsets.py  wsgi.py
geoProject/geoProject/tests/: test_authentication.py
geoProject/geoWorld/: admin.py  apps.py  models.py  serializers.py  views.py
geoProject/geoWorld/management/commands/: ingest_data.py
geoProject/geoWorld/migrations/: 0001_initial.py  0002_alter_municipality_name.py  0003_alter_municipality_options.py
geoProject/geoWorld/tests/: test_ingest_data.py  test_migrations.py  test_views.py
geoProject/geoWorld/tests/data/: example_muncipality.geojson
