[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-Project"
version = "42"
dependencies = [
    "django<=5",
    "psycopg2-binary",
    "pip-tools",
    "hatchling",
    "djangorestframework",
    "markdown",
    "django-filter",
    "djangorestframework-simplejwt",
    "djangorestframework-gis",
    "geopandas",
    "rich"]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "geoProject.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
